--- a/predictive-ai-service/tsconfig.json
+++ b/predictive-ai-service/tsconfig.json
@@ -22,7 +22,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/utils/auth.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/utils/auth.js", "src/app/launch/page.js"],
   "exclude": ["node_modules"],
   "strict": false, // Disables all strict type-checking options
   "noImplicitAny": false, // Allows implicit `any` types
