Removed vercel-build

--- a/predictive-ai-service/package.json
+++ b/predictive-ai-service/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "starting app..."
+    "lint": "next lint"
   },
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
